[package]
authors = ["Flauer <751533978@qq.com>"]
description = "LeetCode solutions in Rust, with Chinese comment. 用 Rust 刷 LeetCode，带中文注释"
edition = "2018"
license = "MIT"
name = "leetcode-rust-cn"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
